--- a/JSP/jsp.css
+++ b/JSP/jsp.css
@@ -1,4 +1,27 @@
-h1{
-    color: red;
+
+.flag{
+ width: 900px;
+ height: 600px;
+ background-color: red;
+ position: relative;
+}
+.flag > div {
+width: 100%;
+height: 300px;
+background-color: rgb(10, 10, 79);
+position: absolute;
+top: 150PX;
+}
+.flag > div > div {
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    border-radius: 50%;
+    position: relative;
+    left: 40%;
+    top: 30px;
+}
+p{
+    color: white;
     text-align: center;
 }
